<resources>
    <string name="app_name">Do Not Call Assistant</string>
    <string name="federal_report_url">www.donotcall.gov</string><!-- ,basicbearengineering.azurewebsites.net  -->
    <string name="federal_report_url_postfix">report.html</string><!--  , Test -->
    <string name="federal_registration_url_postfix">register.html</string>
    <string name="federal_verify_registration_url_postfix">verify.html</string>
    <string name="federal_url_step1">step1</string>
    <string name="contact_info_form_first_name_hint">First Name</string>
    <string name="contact_info_form_last_name_hint">Last Name</string>
    <string name="contact_info_form_street_address_1_hint">Street Address 1</string>
    <string name="contact_info_form_street_address_2_hint">Street Address 2</string>
    <string name="contact_info_form_city_hint">City</string>
    <string name="contact_info_form_state_hint">State</string>
    <string name="contact_info_form_zip_code_hint">Zip Code</string>
    <string name="contact_info_form_button_text">Save</string>
    <string name="contact_info_form_phone_number_hint">Receiving Phone Number</string>
    <string name="contact_info_form_requirement_toast">Please fill out required contact information.</string>
    <string name="main_button_contact_info">Contact Information</string>
    <string name="main_button_initial_registration">Initial Registration</string>
    <string name="main_button_report_call">Report Call</string>
    <string name="report_form_call_window_text">Open Call App</string>
    <string name="report_form_load_info_text">Load Info</string>
    <string name="report_form_save_return_text">Save + Return</string>
    <string name="report_form_done_text">Return</string>
    <string name="main_button_verify_registration">Verify Registration</string>
    <string name="main_tool_bar_title">Do Not Call Assistant</string>
    <string name="contact_info_form_email_hint">Email</string>
    <string name="default_phone_number">No Phone Number</string>
    <string name="default_call_date">No Call Date</string>
    <string name="report_history_item_isMobileCall">mobile call</string>
    <string name="report_history_item_haveDoneBusiness">prior business relation</string>
    <string name="report_history_item_askedToStop">asked to stop</string>
    <string name="report_history_detail_companyName_tag">Caller Company Name:</string>
    <string name="report_history_detail_subjectMatter_tag">Subject Matter:</string>
    <string name="report_history_detail_comments_tag">Comments : </string>
    <string name="main_button_report_history">Report History</string>
    <string name="report_history_title">Report History</string>
    <string name="report_history_counter">Number of Reports : </string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string><!--TEST :  ;ACTUAL : ca-app-pub-2984887454634255/2175184119 -->
    <string name="report_history_item_report_button">Report</string>
    <string name="report_history_item_delete_button">Delete</string>

</resources>

    <!--Test to Actual Check List
     1) MainActivity.kt remove the .appendPath("Apps") in goto_gov_site
     2) Change Ad id
     3) Change strings: federal_report_url, federal_report_url_postfix

     -->