<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    >


    <FrameLayout
        android:id="@+id/report_history_item_report_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TextView
                android:id="@+id/report_history_item_companyPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_phone_number"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/report_history_item_phone_call_date"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/report_history_item_call_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="-1"

                app:layout_constraintTop_toTopOf="@id/report_history_item_companyPhoneNumber"
                app:layout_constraintBottom_toBottomOf="@id/report_history_item_companyPhoneNumber"
                app:layout_constraintStart_toEndOf="@id/report_history_item_companyPhoneNumber"
                app:srcCompat="?attr/actionModeCloseDrawable"

                />
            <TextView
                android:id="@+id/report_history_item_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_phone_number"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/report_history_item_call_arrow"
                app:layout_constraintBottom_toTopOf="@id/report_history_item_phone_call_date"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/report_history_item_phone_call_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_call_date"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/report_history_item_companyPhoneNumber"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/report_history_item_phone_call_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/report_history_item_report_summary"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        >

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/report_history_item_isMobileCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_history_item_isMobileCall" />

            <com.google.android.material.chip.Chip
                android:id="@+id/report_history_item_haveDoneBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_history_item_haveDoneBusiness" />

            <com.google.android.material.chip.Chip
                android:id="@+id/report_history_item_askedToStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_history_item_askedToStop" />


        </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/report_history_detail_companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_history_detail_companyName_tag" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/report_history_detail_subjectMatter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_history_detail_subjectMatter_tag" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/report_history_detail_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_history_detail_comments_tag" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/report_history_detail_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/red"
                android:text="@string/report_history_item_delete_button" />

            <Button
                android:id="@+id/report_history_detail_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/report_history_item_report_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>