<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/report_history_fragment_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:title="@string/report_history_title"
            app:titleTextColor="?attr/colorOnPrimary"
            app:subtitle="@string/report_history_counter"
            app:subtitleTextColor="?attr/colorOnPrimary"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/report_history_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toTopOf="@id/report_history_adView"
            app:layout_constraintTop_toBottomOf="@id/report_history_fragment_tool_bar">


        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"

            android:id="@+id/report_history_adView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ad_height"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_id"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>